@@ -6,7 +6,7 @@ Dist::Zilla::PluginBundle::Author::LESPEA - LESPEA's Dist::Zilla Configuration
 
 =head1 VERSION
 
-version 1.007000
+version 1.008000
 
 =head1 SYNOPSIS
 
@@ -56,7 +56,10 @@ This plugin bundle, in its default configuration, is equivalent to:
     [Test::CPAN::Changes]
     [Test::Compile]
     [Test::DistManifest]
+    [Test::EOL]
+    [Test::Kwalitee]
     [Test::MinimumVersion]
+    [Test::NoTabs]
     [Test::Perl::Critic]
     [TestRelease]
     [UploadToCPAN]
@@ -330,7 +333,19 @@ L<Dist::Zilla::Plugin::Test::DistManifest|Dist::Zilla::Plugin::Test::DistManifes
 
 =item *
 
+L<Dist::Zilla::Plugin::Test::EOL|Dist::Zilla::Plugin::Test::EOL>
+
+=item *
+
+L<Dist::Zilla::Plugin::Test::Kwalitee|Dist::Zilla::Plugin::Test::Kwalitee>
+
+=item *
+
 L<Dist::Zilla::Plugin::Test::MinimumVersion|Dist::Zilla::Plugin::Test::MinimumVersion>
+
+=item *
+
+L<Dist::Zilla::Plugin::Test::NoTabs|Dist::Zilla::Plugin::Test::NoTabs>
 
 =item *
 
