@@ -1,7 +1,7 @@
 name             = Dist-Zilla-PluginBundle-Author-LESPEA
 author           = Adam Lesperance <lespea@gmail.com>
 license          = Perl_5
-version          = 1.007000
+version          = 1.008000
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2014
@@ -65,7 +65,6 @@ Perl::MinimumVersion                                = 0
 Perl::OSType                                        = 0
 Perl::PrereqScanner                                 = 0
 Test::CPAN::Meta                                    = 0
-;Test::EOL                                           = 0.8
 Test::Perl::Critic                                  = 0
 Test::Pod::Content                                  = 0
 Dist::Zilla                                         = 4.300000
@@ -85,7 +84,6 @@ Dist::Zilla::Plugin::ConfirmRelease                 = 0
 Dist::Zilla::Plugin::ConsistentVersionTest          = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild             = 0
 Dist::Zilla::Plugin::DualBuilders                   = 0
-Dist::Zilla::Plugin::EOLTests                       = 0
 Dist::Zilla::Plugin::ExecDir                        = 0
 Dist::Zilla::Plugin::ExtraTests                     = 0
 Dist::Zilla::Plugin::FakeRelease                    = 0
@@ -104,7 +102,6 @@ Dist::Zilla::Plugin::MetaYAML                       = 0
 Dist::Zilla::Plugin::MinimumPerl                    = 0
 Dist::Zilla::Plugin::ModuleBuild                    = 0
 Dist::Zilla::Plugin::NextRelease                    = 0
-Dist::Zilla::Plugin::NoTabsTests                    = 0
 Dist::Zilla::Plugin::PkgVersion                     = 0
 Dist::Zilla::Plugin::PodCoverageTests               = 0
 Dist::Zilla::Plugin::PodSyntaxTests                 = 0
@@ -117,8 +114,10 @@ Dist::Zilla::Plugin::SpellingCommonMistakesTests    = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes            = 0.005
 Dist::Zilla::Plugin::Test::Compile                  = 1.112400
 Dist::Zilla::Plugin::Test::DistManifest             = 2.0.1
-;Dist::Zilla::Plugin::Test::Kwalitee                 = 0
+Dist::Zilla::Plugin::Test::EOL                      = 0.12
+Dist::Zilla::Plugin::Test::Kwalitee                 = 0
 Dist::Zilla::Plugin::Test::MinimumVersion           = 2.0.1
+Dist::Zilla::Plugin::Test::NoTabs                   = 0
 Dist::Zilla::Plugin::Test::Perl::Critic             = 2.112410
 Dist::Zilla::Plugin::Test::Portability              = 2.0.1
 Dist::Zilla::Plugin::Test::Synopsis                 = 2.0.1
